Fixed bug of small playlist info on mobile

--- a/src/app/content-pages/playlist/playlist.page.component.scss
+++ b/src/app/content-pages/playlist/playlist.page.component.scss
@@ -73,6 +73,7 @@
                 float: left;
                 margin-top: 7%;
                 margin-left: 5%;
+                width: 100%;
             }
         }
 
